@@ -1,3 +1,12 @@
+2012-02-01  Nick Clifton  <nickc@redhat.com>
+
+	* Import this patch from the mainline:
+	2012-01-05  Nick Clifton  <nickc@redhat.com>
+
+	PR ld/12161
+	* elf32-avr.c (elf32_avr_relax_delete_bytes): Read in relocs if
+	necessary.
+
 2012-01-27  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	Backport from mainline:
